packages/llvm/src/tests/variable_declaration/snapshots/llvm__tests__variable_declaration__let_variable_declaration__const _x = 1let x  = ((_x)) __ ((1)).snap
---
source: packages/llvm/src/tests/variable_declaration/let_variable_declaration.rs
expression: output

---
; ModuleID = 'main'
source_filename = "main"

define void @main() {
entry:
  %_x_ = alloca double, align 8
  store double 1.000000e+00, double* %_x_, align 8
  %x_ = alloca double, align 8
  %"2" = load double, double* %_x_, align 8
  %"1" = fdiv double %"2", 1.000000e+00
  store double %"1", double* %x_, align 8
  ret void
}

define void @__typescript__personality() {
entry:
  ret void
}

